--- a/shoreacres/static/assets/css/main.css
+++ b/shoreacres/static/assets/css/main.css
@@ -2597,6 +2597,7 @@
 
 			#banner {
 				background-attachment: scroll;
+				background-position: center;
 			}
 
 		/* CTA */
@@ -2652,9 +2653,9 @@
 				padding: 3em 2.5em;
 			}
 
-				.wrapper.special br {
+				/*.wrapper.special br {
 					display: none;
-				}
+				}*/
 
 				.wrapper.style1 {
 					padding: 0 2.5em;
@@ -2730,7 +2731,7 @@
 
 	.profile .dir_info li {
 		display: block;
-		font-size: 4vw;
+		font-size: 3vw;
 		border-bottom: solid 1px rgba(124, 128, 129, 0.1);
 	}
 
@@ -3077,6 +3078,9 @@
 
 	@media screen and (max-width: 736px) {
 
+	.profile .dir_info li {
+		font-size: 4vw;
+	}
 		/* Basic */
 
 			body {
@@ -3174,9 +3178,9 @@
 				padding: 2.25em 1.5em;
 			}
 
-				.wrapper.special br {
+				/*.wrapper.special br {
 					display: none;
-				}
+				}*/
 
 				.wrapper.style1 {
 					padding: 0 1.5em;
