--- a/shoreacres/templates/index.html
+++ b/shoreacres/templates/index.html
@@ -22,6 +22,7 @@
 							<li class="submenu">
 								<a href="#">About</a>
 								<ul>
+									<li><a href="/">Main Page</a></li>
 									<li><a href="/about/">About</a></li>
 									<li><a href="/officers/">Officers</a></li>
 									<li><a href="/board/">Board of Directors</a></li>
