--- a/shoreacres/templates/events.html
+++ b/shoreacres/templates/events.html
@@ -11,9 +11,10 @@
                   {% for event in events %}
                     <div class="4u 12u(narrower)">
 
-                      <section>
-                        <div class="img" style='background-image:url("/{{ event.img }}");'></div>
+                      <section class="events">
+                        
                         <header>
+                          <div class="img" style='background-image:url("/{{ event.img }}");'></div>
                           <h3>{{ event.title }}</h3>
                           <h1>{{ event.date|date }} {{ event.date|time }}</h1>
                         </header>
