--- a/shoreacres/templates/index.html
+++ b/shoreacres/templates/index.html
@@ -66,7 +66,7 @@
 								<ul>
 									<li><a href="/directory/">Directory</a></li>
 									<li><a href="/dues/">Pay Dues</a></li>
-									<li><a href="#">Classifieds</a></li>
+									<li><a href="/classifieds/">Classifieds</a></li>
 									<li><a href="/edit/">Edit My Profile</a></li>
 									{% if request.user.profile.is_president or request.user.profile.is_vice_president or request.user.profile.is_secretary or request.user.profile.is_treasurer or request.user.profile.is_director %}
 											<li class="submenu">
