add clubhouse carousel

--- a/templates/clubhouse.html
+++ b/templates/clubhouse.html
@@ -365,6 +365,93 @@
               Brattain at <a href="tel://+19722004488">(972) 200-4488</a> for
               more information.
             </p>
+        <div class="container-fluid">
+          <div class="row">
+
+            <div class="lqd-column col-md-12">
+
+              <div  class="carousel-container carousel-shadow-active carousel-nav-left carousel-nav-md carousel-dots-style1">
+                <div class="carousel-items row" data-lqd-flickity='{"cellAlign":"center","prevNextButtons":true,"pageDots":true,"groupCells":false,"wrapAround":true,"pauseAutoPlayOnHover":false}'>
+
+                  <div class="carousel-item col-md-6">
+                    <figure>
+                      <img src="{% static '/saia_clubhouse/shore_acres_clubhouse_1.jpg' %}" alt="Carousel Item">
+                    </figure>
+                  </div><!-- /.carousel-item -->
+
+                  <div class="carousel-item col-md-6">
+                    <figure>
+                      <img src="{% static '/saia_clubhouse/shore_acres_clubhouse_2.jpg' %}" alt="Carousel Item">
+                    </figure>
+                  </div><!-- /.carousel-item -->
+
+                  <div class="carousel-item col-md-6">
+                    <figure>
+                      <img src="{% static '/saia_clubhouse/shore_acres_clubhouse_3.jpg' %}" alt="Carousel Item">
+                    </figure>
+                  </div><!-- /.carousel-item -->
+
+                  <div class="carousel-item col-md-6">
+                    <figure>
+                      <img src="{% static '/saia_clubhouse/shore_acres_clubhouse_4.jpg' %}" alt="Carousel Item">
+                    </figure>
+                  </div><!-- /.carousel-item -->
+
+                  <div class="carousel-item col-md-6">
+                    <figure>
+                      <img src="{% static '/saia_clubhouse/shore_acres_clubhouse_5.jpg' %}" alt="Carousel Item">
+                    </figure>
+                  </div><!-- /.carousel-item -->
+
+                  <div class="carousel-item col-md-6">
+                    <figure>
+                      <img src="{% static '/saia_clubhouse/shore_acres_clubhouse_6.jpg' %}" alt="Carousel Item">
+                    </figure>
+                  </div><!-- /.carousel-item -->
+
+                  <div class="carousel-item col-md-6">
+                    <figure>
+                      <img src="{% static '/saia_clubhouse/shore_acres_clubhouse_7.jpg' %}" alt="Carousel Item">
+                    </figure>
+                  </div><!-- /.carousel-item -->
+
+                  <div class="carousel-item col-md-6">
+                    <figure>
+                      <img src="{% static '/saia_clubhouse/shore_acres_clubhouse_8.jpg' %}" alt="Carousel Item">
+                    </figure>
+                  </div><!-- /.carousel-item -->
+
+                  <div class="carousel-item col-md-6">
+                    <figure>
+                      <img src="{% static '/saia_clubhouse/shore_acres_clubhouse_9.jpg' %}" alt="Carousel Item">
+                    </figure>
+                  </div><!-- /.carousel-item -->
+
+                  <div class="carousel-item col-md-6">
+                    <figure>
+                      <img src="{% static '/saia_clubhouse/shore_acres_clubhouse_10.jpg' %}" alt="Carousel Item">
+                    </figure>
+                  </div><!-- /.carousel-item -->
+
+                  <div class="carousel-item col-md-6">
+                    <figure>
+                      <img src="{% static '/saia_clubhouse/shore_acres_clubhouse_11.jpg' %}" alt="Carousel Item">
+                    </figure>
+                  </div><!-- /.carousel-item -->
+
+                  <div class="carousel-item col-md-6">
+                    <figure>
+                      <img src="{% static '/saia_clubhouse/shore_acres_clubhouse_12.jpg' %}" alt="Carousel Item">
+                    </figure>
+                  </div><!-- /.carousel-item -->
+
+                </div><!-- /.carousel-items -->
+              </div><!-- /.carousel-container -->
+
+            </div><!-- /.col-md-12 -->
+
+          </div><!-- /.row -->
+        </div><!-- /.container-fluid -->
             <footer class="blog-single-footer entry-footer"></footer>
             <!-- /.blog-single-footer entry-footer -->
           </div>
