push for handover

--- a/templates/clubhouse.html
+++ b/templates/clubhouse.html
@@ -90,7 +90,7 @@
               about date availability, please
               <a href="#contact">contact us here</a> or feel free to reach out
               to Will Brattain directly at
-              <a href="mailto:will@shombo.com">will@shombo.com</a>, or call /
+              <a href="mailto:will@brattain.io">will@brattain.io</a>, or call /
               text <a href="tel://+19722004488">(972) 200-4488</a>. The current
               rental agreement is available
               <a
@@ -365,13 +365,23 @@
               Brattain at <a href="tel://+19722004488">(972) 200-4488</a> for
               more information.
             </p>
+            <footer class="blog-single-footer entry-footer"></footer>
+            <!-- /.blog-single-footer entry-footer -->
+          </div>
+          <!-- /.col-md-8 -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+      <!-- prettier-ignore -->
+    </div>
         <div class="container-fluid">
           <div class="row">
 
             <div class="lqd-column col-md-12">
 
               <div  class="carousel-container carousel-shadow-active carousel-nav-left carousel-nav-md carousel-dots-style1">
-                <div class="carousel-items row" data-lqd-flickity='{"cellAlign":"center","prevNextButtons":true,"pageDots":true,"groupCells":false,"wrapAround":true,"pauseAutoPlayOnHover":false}'>
+                <div class="carousel-items row" data-lqd-flickity='{"cellAlign":"center","prevNextButtons":false,"pageDots":true,"groupCells":false,"wrapAround":true,"pauseAutoPlayOnHover":false}'>
 
                   <div class="carousel-item col-md-6">
                     <figure>
@@ -452,16 +462,6 @@
 
           </div><!-- /.row -->
         </div><!-- /.container-fluid -->
-            <footer class="blog-single-footer entry-footer"></footer>
-            <!-- /.blog-single-footer entry-footer -->
-          </div>
-          <!-- /.col-md-8 -->
-        </div>
-        <!-- /.row -->
-      </div>
-      <!-- /.container -->
-      <!-- prettier-ignore -->
-    </div>
   </article>
   <!-- /.blog-single -->
 </main>
